src/lexical_analysis/tests/snapshots/monkey_interpreter__lexical_analysis__tests__test_lexical_analysis_tokenization_for_identifiers_case2.snap
---
source: src/lexical_analysis/tests/mod.rs
expression: "crate::lexical_analysis::get_tokens(code)"
---
[
    Let,
    Identifier {
        literal: "varX",
    },
    Assign,
    Integer {
        literal: "5",
    },
    Plus,
    Integer {
        literal: "5",
    },
    SemiColon,
    EndOfFile,
]
