src/lexical_analysis/tests/snapshots/monkey_interpreter__lexical_analysis__tests__test_lexical_analysis_tokenization_for_keywords_case3.snap
---
source: src/lexical_analysis/tests/mod.rs
expression: "crate::lexical_analysis::LexicalAnalysis::from(code)"

---
[
    If,
    True,
    Return,
    Integer {
        literal: "3",
    },
    SemiColon,
    Else,
    Return,
    Integer {
        literal: "45",
    },
    SemiColon,
    EndOfFile,
]
